now starting thymeleaf

--- a/SpringSecuritySocial/src/main/webapp/WEB-INF/views/connect/facebookProfile.html
+++ b/SpringSecuritySocial/src/main/webapp/WEB-INF/views/connect/facebookProfile.html
@@ -40,6 +40,7 @@
 					<button type="submit">Disconnect from Facebook</button>	
 					<input type="hidden" name="_method" value="delete" />
 				</form>
+				<p>You will have to sign up once more if you are registered through facebook!</p>
 				<hr/>
 				<p>
 				<a href="/admin/logout" class="btn btn-lrg btn-danger">Logout</a>
